--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.15.6",
+    "pg": "^7.8.0",
     "request": "^2.88.0",
+    "sequelize": "^4.42.0",
     "spotify-web-api-node": "^4.0.0"
   }
 }
