--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.3",
+    "connect-flash": "^0.1.1",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.15.6",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.8.0",
     "request": "^2.88.0",
+    "router": "^1.3.3",
     "sequelize": "^4.42.0",
     "spotify-web-api-node": "^4.0.0"
   }
