--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "request": "^2.88.0",
     "router": "^1.3.3",
     "sequelize": "^4.42.0",
+    "sequelize-cli": "^5.4.0",
     "spotify-web-api-node": "^4.0.0"
   }
 }
