everything works fine could not figure out how to delete artist

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 SESSIONS_SECRET='secretshhhhh;)'
+
+client_Id = 'd459153dd3f7453c826a6073f648cfbe'
+client_Secret = '938e00570fa1497a8b26925c01ab7eaa'
